Revised index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                src="images/example1.png"/>
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered">
-              Work Example
+              Work Examples
             </dt>
             <dd></dd>
           </dl>
