--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        MY CLOUD PORTFOLIO
+        MY CLOUD PORTFOLIO--
       </h1>
 
       <ul class="section--social">
